# forms

./: Cargo.toml
examples/itasks_npm/: Cargo.toml
examples/itasks_npm/src/: main.rs
examples/itasks_rocket/: Cargo.toml
examples/itasks_rocket/src/: main.rs
examples/rocket/: main.rs
itasks/: Cargo.toml
itasks/src/: component.rs  html.rs  lib.rs  prelude.rs  rocket.rs  task.rs
itasks/src/backend/: mod.rs  rocket.rs
itasks/src/frontend/: form.rs  html.rs  mod.rs  style.css
itasks/static/: style.css
itasks_derive/: Cargo.toml
itasks_derive/src/: lib.rs
src/: component.rs  lib.rs  rocket.rs  task.rs
wasm/: Cargo.toml
www/: package-lock.json  package.json
