[package]
name = "itasks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "itasks_derive",
]

[dependencies]
itasks_derive = { path = "./itasks_derive" }
rocket = { version = "0.5.0-rc.1", optional = true }

[[example]]
name = "rocket"
required-features = ["rocket"]
